--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
       <ul class="nav-links">
         
         <li><a href="index_bootstrap.html">Professional Page</a></li>
-        <li><a href="#trade-volume">AI Game</a></li>
+        <li><a href="snake_game.html">AI Game</a></li>
       </ul>
     </div>
   </nav>
