Initial commit - Snake game

--- a/resume.html
+++ b/resume.html
@@ -115,7 +115,7 @@
 
             <!-- Link Back to Main Page -->
             <div class="text-center back-to-main">
-                <a href="index_bootstrap.html" class="btn btn-primary btn-lg" style="background-color: #6c757d; border-color: #6c757d;">
+                <a href="index.html" class="btn btn-primary btn-lg" style="background-color: #6c757d; border-color: #6c757d;">
                     Back to Main Page
                 </a>
             </div>
