--- a/snake_game.html
+++ b/snake_game.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <!-- Return to Main Page Button -->
-    <a href="index_bootstrap.html" class="return-button">Return to Main Page</a>
+    <a href="index.html" class="return-button">Return to Main Page</a>
 
     <div class="game-container">
         <h1>Snake Game</h1>
