--- a/scratch.html
+++ b/scratch.html
@@ -12,7 +12,7 @@
       <div class="logo">Ramen Crypto</div>
       <ul class="nav-links">
         
-        <li><a href="index_bootstrap.html">Professional Page</a></li>
+        <li><a href="index.html">Professional Page</a></li>
         <li><a href="snake_game.html">AI Game</a></li>
       </ul>
     </div>
