--- a/scratch.html
+++ b/scratch.html
@@ -89,7 +89,7 @@
     <h2>Solana Trade Volume vs ETH and BTC</h2>
     <p>Interactive graph comparing trade volumes:</p>
     <iframe 
-      src="https://public.tableau.com/app/profile/yingxun/viz/CryptocurrencyDashboard_16277555523450/Dashboard1" 
+      src="https://public.tableau.com/authoring/crytpcopy2021/Dashboard1#2" 
       width="50%" 
       height="250" 
       frameborder="100">
