--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
                         <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
                         <li class="nav-item"><a class="nav-link" href="#scratch">Scratch Page</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#game">AI Game</a></li>
                     </ul>
                 </div>
             </div>
@@ -110,7 +111,7 @@
 </section>
 
 <!-- Game Section -->
-<section class="text-center bg-light py-5" id="resume">
+<section class="text-center bg-light py-5" id="game">
     <div class="container px-4 px-lg-5">
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-8">
