--- a/scratch.html
+++ b/scratch.html
@@ -89,7 +89,7 @@
     <h2>Solana Trade Volume vs ETH and BTC</h2>
     <p>Interactive graph comparing trade volumes:</p>
     <iframe 
-      src="https://public.tableau.com/app/profile/matthew.rahm5206/viz/crytpcopy2021/Dashboard1#3" 
+      src="https://public.tableau.com/views/crytpcopy2021/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" 
       width="50%" 
       height="250" 
       frameborder="100">
