--- a/scratch.html
+++ b/scratch.html
@@ -88,13 +88,54 @@
   <section id="trade-volume" class="section dark-bg">
     <h2>Solana Trade Volume vs ETH and BTC</h2>
     <p>Interactive graph comparing trade volumes:</p>
-    <iframe 
-      src="https://public.tableau.com/views/crytpcopy2021/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" 
-      width="50%" 
-      height="250" 
-      frameborder="100">
-    </iframe>
-  </section>
+
+    <!-- Tableau Embed -->
+    <div class='tableauPlaceholder' id='viz1734390279710' style='position: relative'>
+        <noscript>
+            <a href='#'>
+                <img alt='Dashboard 1 ' 
+                     src='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1_rss.png' 
+                     style='border: none' />
+            </a>
+        </noscript>
+        <object class='tableauViz' style='display:none;'>
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='site_root' value='' />
+            <param name='name' value='crytpcopy2021&#47;Dashboard1' />
+            <param name='tabs' value='no' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+        </object>
+    </div>
+
+    <!-- Tableau API Script -->
+    <script type='text/javascript'>
+        var divElement = document.getElementById('viz1734390279710');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        if (divElement.offsetWidth > 800) { 
+            vizElement.style.width = '1000px'; 
+            vizElement.style.height = '800px';
+        } else if (divElement.offsetWidth > 500) { 
+            vizElement.style.width = '100%'; 
+            vizElement.style.height = '600px';
+        } else { 
+            vizElement.style.width = '100%'; 
+            vizElement.style.height = '400px';
+        }
+
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+</section>
+
 
 
   <div class="video-section">
