Replace Tableau iframe with dynamic button link

--- a/scratch.html
+++ b/scratch.html
@@ -85,16 +85,30 @@
   </section>
 
   <!-- Interactive Tableau Graph -->
-  <section id="trade-volume" class="section dark-bg">
-    <h2>Solana Trade Volume vs ETH and BTC</h2>
-    <p>Interactive graph comparing trade volumes:</p>
-    <iframe 
-      src="https://public.tableau.com/views/crytpcopy2021/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" 
-      width="50%" 
-      height="250" 
-      frameborder="100">
-    </iframe>
-  </section>
+  <section id="trade-volume" class="section dark-bg" style="text-align: center; padding: 40px 0;">
+    <h2 style="color: white; font-size: 2rem;">Solana Trade Volume vs ETH and BTC</h2>
+    <p style="color: #aaa; font-size: 1.2rem; margin-bottom: 20px;">
+        Click below to view the interactive Tableau graph in a new tab:
+    </p>
+
+    <!-- Button-style link -->
+    <a href="https://public.tableau.com/views/crytpcopy2021/Dashboard1?:language=en-US&:embed=true" 
+       target="_blank" 
+       style="
+            display: inline-block;
+            background-color: #00d8ff;
+            color: #121212;
+            font-size: 1.2rem;
+            font-weight: bold;
+            text-decoration: none;
+            padding: 12px 24px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s ease;">
+        View Interactive Tableau Dashboard
+    </a>
+</section>
+
 
 
   <div class="video-section">
