Replace Tableau iframe with dynamic button link

--- a/scratch.html
+++ b/scratch.html
@@ -85,29 +85,30 @@
   </section>
 
   <!-- Interactive Tableau Graph -->
-  <section id="trade-volume" class="section dark-bg" style="text-align: center; padding: 40px 0;">
+  <section id="trade-volume" class="section dark-bg" style="text-align: center; padding: 40px;">
     <h2 style="color: white; font-size: 2rem;">Solana Trade Volume vs ETH and BTC</h2>
     <p style="color: #aaa; font-size: 1.2rem; margin-bottom: 20px;">
-        Click below to view the interactive Tableau graph in a new tab:
+        Click below to explore the interactive Tableau graph in full screen.
     </p>
 
-    <!-- Button-style link -->
-    <a href="https://public.tableau.com/views/crytpcopy2021/Dashboard1?:language=en-US&:embed=true" 
-       target="_blank" 
+    <!-- Interactive banner link -->
+    <a href="https://public.tableau.com/views/crytpcopy2021/Dashboard1?:language=en-US&:embed=true"
+       target="_blank"
        style="
             display: inline-block;
-            background-color: #00d8ff;
-            color: #121212;
-            font-size: 1.2rem;
-            font-weight: bold;
-            text-decoration: none;
-            padding: 12px 24px;
+            width: 80%;
+            height: 400px;
+            background: url('https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png') center center/cover no-repeat;
+            border: 2px solid #00d8ff;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            transition: background-color 0.3s ease;">
-        View Interactive Tableau Dashboard
+            transition: transform 0.3s ease;">
+        <span style="display: block; color: white; font-weight: bold; margin-top: 150px; font-size: 1.5rem; text-shadow: 2px 2px 4px #000;">
+            Click Here to View the Interactive Dashboard
+        </span>
     </a>
 </section>
+
 
 
 
