--- a/scratch.html
+++ b/scratch.html
@@ -88,26 +88,50 @@
   <section id="trade-volume" class="section dark-bg" style="text-align: center; padding: 40px;">
     <h2 style="color: white; font-size: 2rem;">Solana Trade Volume vs ETH and BTC</h2>
     <p style="color: #aaa; font-size: 1.2rem; margin-bottom: 20px;">
-        Click below to explore the interactive Tableau graph in full screen.
+        Interactive graph powered by Tableau:
     </p>
 
-    <!-- Interactive banner link -->
-    <a href="https://public.tableau.com/views/crytpcopy2021/Dashboard1?:language=en-US&:embed=true"
-       target="_blank"
-       style="
-            display: inline-block;
-            width: 80%;
-            height: 400px;
-            background: url('https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png') center center/cover no-repeat;
-            border: 2px solid #00d8ff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease;">
-        <span style="display: block; color: white; font-weight: bold; margin-top: 150px; font-size: 1.5rem; text-shadow: 2px 2px 4px #000;">
-            Click Here to View the Interactive Dashboard
-        </span>
-    </a>
+    <!-- Tableau Embed -->
+    <div class='tableauPlaceholder' id='viz1733370233637' style='position: relative; margin: 0 auto;'>
+        <noscript>
+            <a href='#'>
+                <img alt='Tableau Dashboard' 
+                     src='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png' 
+                     style='border: none;' />
+            </a>
+        </noscript>
+        <object class='tableauViz' style='display: none;'>
+            <!-- Tableau Parameters -->
+            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+            <param name='embed_code_version' value='3' />
+            <param name='path' value='views/crytpcopy2021/Dashboard1' />
+            <param name='toolbar' value='yes' />
+            <param name='static_image' value='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png' />
+            <param name='animate_transition' value='yes' />
+            <param name='display_static_image' value='yes' />
+            <param name='display_spinner' value='yes' />
+            <param name='display_overlay' value='yes' />
+            <param name='display_count' value='yes' />
+            <param name='language' value='en-US' />
+        </object>
+    </div>
+
+    <!-- Tableau API Script -->
+    <script type='text/javascript'>
+        var divElement = document.getElementById('viz1733370233637');
+        var vizElement = divElement.getElementsByTagName('object')[0];
+        
+        // Set Tableau visualization dimensions
+        vizElement.style.width = '80%';
+        vizElement.style.height = '600px';
+
+        // Load Tableau's JavaScript API
+        var scriptElement = document.createElement('script');
+        scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
 </section>
+
 
 
 
