--- a/scratch.html
+++ b/scratch.html
@@ -85,52 +85,53 @@
   </section>
 
   <!-- Interactive Tableau Graph -->
-  <section id="trade-volume" class="section dark-bg" style="text-align: center; padding: 40px;">
-    <h2 style="color: white; font-size: 2rem;">Solana Trade Volume vs ETH and BTC</h2>
-    <p style="color: #aaa; font-size: 1.2rem; margin-bottom: 20px;">
-        Interactive graph powered by Tableau:
-    </p>
+  <section id="trade-volume" class="section dark-bg" style="display: flex; justify-content: center; align-items: center; padding: 40px; min-height: 600px;">
+    <div style="text-align: center; max-width: 100%; margin: auto;">
+        <h2 style="color: white; font-size: 2rem;">Solana Trade Volume vs ETH and BTC</h2>
+        <p style="color: #aaa; font-size: 1.2rem; margin-bottom: 20px;">
+            Interactive graph powered by Tableau:
+        </p>
 
-    <!-- Tableau Embed -->
-    <div class='tableauPlaceholder' id='viz1733370233637' style='position: relative; margin: 0 auto;'>
-        <noscript>
-            <a href='#'>
-                <img alt='Tableau Dashboard' 
-                     src='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png' 
-                     style='border: none;' />
-            </a>
-        </noscript>
-        <object class='tableauViz' style='display: none;'>
-            <!-- Tableau Parameters -->
-            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-            <param name='embed_code_version' value='3' />
-            <param name='path' value='views/crytpcopy2021/Dashboard1' />
-            <param name='toolbar' value='yes' />
-            <param name='static_image' value='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png' />
-            <param name='animate_transition' value='yes' />
-            <param name='display_static_image' value='yes' />
-            <param name='display_spinner' value='yes' />
-            <param name='display_overlay' value='yes' />
-            <param name='display_count' value='yes' />
-            <param name='language' value='en-US' />
-        </object>
+        <!-- Tableau Embed -->
+        <div class='tableauPlaceholder' id='viz1733370233637' style='position: relative; display: inline-block;'>
+            <noscript>
+                <a href='#'>
+                    <img alt='Tableau Dashboard' 
+                         src='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png' 
+                         style='border: none;' />
+                </a>
+            </noscript>
+            <object class='tableauViz' style='display: none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='path' value='views/crytpcopy2021/Dashboard1' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image' value='https://public.tableau.com/static/images/cr/crytpcopy2021/Dashboard1/1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='en-US' />
+            </object>
+        </div>
     </div>
 
-    <!-- Tableau API Script -->
+    <!-- Tableau JS API -->
     <script type='text/javascript'>
         var divElement = document.getElementById('viz1733370233637');
         var vizElement = divElement.getElementsByTagName('object')[0];
-        
-        // Set Tableau visualization dimensions
-        vizElement.style.width = '80%';
+
+        // Set dimensions to center it
+        vizElement.style.width = '1000px';
         vizElement.style.height = '600px';
 
-        // Load Tableau's JavaScript API
         var scriptElement = document.createElement('script');
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
         vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
 </section>
+
 
 
 
