solana website coin gecko

--- a/scratch.html
+++ b/scratch.html
@@ -156,6 +156,20 @@
 </div>
 
 
+<section id="coingecko-live" class="section dark-bg" style="padding: 40px; text-align: center;">
+  <h2 style="color: white; font-size: 2rem;">Solana Live Data (Powered by CoinGecko)</h2>
+  <p style="color: #aaa; font-size: 1.2rem; margin-bottom: 20px;">
+      View live market data, charts, and trends for Solana.
+  </p>
+
+  <iframe src="https://www.coingecko.com/en/coins/solana" 
+          width="100%" 
+          height="800px" 
+          style="border: none; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);">
+  </iframe>
+</section>
+
+
   <!-- Footer -->
   <footer>
     <!-- Back to Top Anchor -->
