solana website coin gecko

--- a/scratch.html
+++ b/scratch.html
@@ -18,7 +18,7 @@
     </div>
   </nav>
 
-  <!-- Home Section -->
+  
   <section id="home" class="section dark-bg">
     <div class="content-center">
       <h1>Welcome to Ramen Crypto</h1>
@@ -27,7 +27,7 @@
     </div>
   </section>
 
-  <!-- Features Section -->
+ 
   <section id="features" class="section dark-bg">
     <h2>Solana Features and Ecosystem</h2>
     <ol>
@@ -52,7 +52,7 @@
     </ol>
   </section>
 
-  <!-- Price Climb Section -->
+  
   <section id="price-climb" class="section dark-bg">
     <h2>Solana's Price Climb (2020 to Present)</h2>
     <div class="card">
@@ -84,7 +84,6 @@
     </div>
   </section>
 
-  <!-- Interactive Tableau Graph -->
   <section id="trade-volume" class="section dark-bg" style="display: flex; justify-content: center; align-items: center; padding: 40px; min-height: 600px;">
     <div style="text-align: center; max-width: 100%; margin: auto;">
         <h2 style="color: white; font-size: 2rem;">Solana Trade Volume vs ETH and BTC</h2>
@@ -92,7 +91,6 @@
             Interactive graph powered by Tableau:
         </p>
 
-        <!-- Tableau Embed -->
         <div class='tableauPlaceholder' id='viz1733370233637' style='position: relative; display: inline-block;'>
             <noscript>
                 <a href='#'>
@@ -117,12 +115,10 @@
         </div>
     </div>
 
-    <!-- Tableau JS API -->
     <script type='text/javascript'>
         var divElement = document.getElementById('viz1733370233637');
         var vizElement = divElement.getElementsByTagName('object')[0];
 
-        // Set dimensions to center it
         vizElement.style.width = '1000px';
         vizElement.style.height = '600px';
 
@@ -162,17 +158,27 @@
       View live market data, charts, and trends for Solana.
   </p>
 
-  <iframe src="https://www.coingecko.com/en/coins/solana" 
-          width="100%" 
-          height="800px" 
-          style="border: none; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);">
-  </iframe>
+  <a href="https://www.coingecko.com/en/coins/solana" 
+     target="_blank" 
+     style="
+          display: inline-block; 
+          background-color: #00d8ff; 
+          color: #121212; 
+          font-size: 1.2rem; 
+          font-weight: bold; 
+          padding: 12px 24px; 
+          border-radius: 8px; 
+          text-decoration: none;
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+          transition: background-color 0.3s;">
+      View Live Solana Data
+  </a>
 </section>
+
 
 
   <!-- Footer -->
   <footer>
-    <!-- Back to Top Anchor -->
 <a href="#home" id="back-to-top" class="back-to-top">Back to Top</a>
 
   </footer>
